@@ -1,5 +1,5 @@
 ;;;;; -*-coding: raw-text;mode: emacs-lisp;-*-
-;;;;; $Id: vars.el.in,v 44.306 2004-11-11 21:17:12 _cvs_pont_lyskomelisp Exp $
+;;;;; $Id: vars.el.in,v 44.307 2004-11-12 08:22:24 _cvs_pont_lyskomelisp Exp $
 ;;;;; Copyright (C) 1991-2002  Lysator Academic Computer Association.
 ;;;;;
 ;;;;; This file is part of the LysKOM Emacs LISP client.
@@ -36,7 +36,7 @@
 
 (setq lyskom-clientversion-long 
       (concat lyskom-clientversion-long
-	      "$Id: vars.el.in,v 44.306 2004-11-11 21:17:12 _cvs_pont_lyskomelisp Exp $\n"))
+	      "$Id: vars.el.in,v 44.307 2004-11-12 08:22:24 _cvs_pont_lyskomelisp Exp $\n"))
 
 (defvar lyskom-dummy-variable-to-fool-the-byte-compiler)
 
@@ -3287,6 +3287,7 @@ Users are encouraged to use their best sense of humor."
     kom-list-persons
     kom-list-news
     kom-list-re
+    kom-list-sessions
     kom-membership
     kom-list-marks
     kom-postpone
